trying to get game center running

--- a/testgame2/testgame2/Resources/Info.plist
+++ b/testgame2/testgame2/Resources/Info.plist
@@ -49,7 +49,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.fullsail.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.johnplank211.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
